// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getJSCode 1`] = `
"
    // This file is auto-generated by @midwayjs/hcc, any modification will be overwritten.
    const { setHydrateOptions } = require('@midwayjs/hooks-internal');

    setHydrateOptions({
      modules: [
        
      ]
    })

    
  "
`;

exports[`getJSCode 2`] = `
"
    // This file is auto-generated by @midwayjs/hcc, any modification will be overwritten.
    const { setHydrateOptions } = require('@midwayjs/hooks-internal');

    setHydrateOptions({
      modules: [
        
          {
            file: 'api.js',
            mod: require('./api.js'),
          },
        
      ]
    })

    require('./entry.js');

  "
`;

exports[`getTSCode 1`] = `
"import { setHydrateOptions } from '@midwayjs/hooks-internal';

    setHydrateOptions({
      modules: [
        
      ]
    });"
`;

exports[`getTSCode 2`] = `
"import { setHydrateOptions } from '@midwayjs/hooks-internal';

    setHydrateOptions({
      modules: [
        
          {
            file: '/api.ts',
            mod: require('./api'),
          },
        
      ]
    });

    import './entry';"
`;
